--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "astro-toolbox",
+  "name": "webinaut-astro-toolbox",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
