--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
   },
   "devDependencies": {
     "eslint": "^8.18.0",
-    "netlify-plugin-cypress": "^2.2.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "typescript": "^5.4.4"
   },
   "dependencies": {
-    "astro": "^4.5.18",
-    "cypress": "^13.7.2"
+    "astro": "^4.5.18"
   }
 }
